Fixing the header background on mobile devices.

--- a/development/css/agency.css
+++ b/development/css/agency.css
@@ -189,7 +189,7 @@ header.masthead .image {
 }
 
 header.masthead .intro-text {
-  padding-top: 50px;
+  padding-top: 25px;
   padding-bottom: 100px;
 }
 
@@ -672,7 +672,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 
 @media (max-width: 992px) {
   #particles-js {
-    height: 600px;
+    height: 800px;
     width: 100%
     position: absolute;
     background-color: #202020;
